syntax = "proto3";
package package_receiver;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "./pkg/data-receiver-service;package_receiver";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Pricer Data Receiver API"
    version: "0.0.1"
  };
  host: "localhost:8080",
  schemes: HTTP,
  consumes: "application/json",
  produces: "application/json"
  security_definitions: {
    security: {
      key: "ApiKeyAuth"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "authorization"
      }
    };
  };
  security: {
    security_requirement: {
      key: "ApiKeyAuth";
      value: {};
    }
  }
};

service CardReceiver {
  rpc CheckHealth(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {get: "/health"};
  }

  rpc ReceiveCard(ReceiveCardRequest) returns (ReceiveCardResponse) {
    option (google.api.http) = {get: "/card"};
  }

  rpc ReceiveWarehouse(ReceiveWarehouseRequest) returns (ReceiveWarehouseResponse) {
    option (google.api.http) = {get: "/warehouse"};
  }
  
  rpc ReceiveStock(ReceiveStockRequest) returns (ReceiveStockResponse) {
    option (google.api.http) = {get: "/stock"};
  }
  
  rpc OfferFeed(google.protobuf.Empty) returns (OfferFeedResponse) {
    option (google.api.http) = {get: "/offerfeed"};
  }
}

message ReceiveCardRequest {
  string seller = 1;
}

message ReceiveCardResponse {
  string id = 1;
}

message ReceiveWarehouseRequest {
  string seller = 1;
}

message ReceiveWarehouseResponse {
  string id = 1;
}

message ReceiveStockRequest {
  string seller = 1;
  string dateFrom = 2;
}

message ReceiveStockResponse {
  string id = 1;
}

message OfferFeedResponse {
  string body = 1;
}
